# megatron

./: README.md
control/: CMakeLists.txt  package.xml
control/src/: control_node.cpp
planning/: CMakeLists.txt  package.xml
planning/src/: planning_node.cpp
test/: begin.sh
